--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,7 @@ body {
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+.code-header~pre {
+  margin-top: 0 !important;
+}
